Change flexbox gap to grid gap due to browser support issue

--- a/src/components/DepositPage.scss
+++ b/src/components/DepositPage.scss
@@ -10,9 +10,10 @@ div.deposit {
   .content {
     width: 888px;
     margin: 0 auto;
-    display: flex;
-    gap: 20px;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 20px;
+    align-items: start;
 
     .infoPanels {
       margin-top: 40px;
@@ -101,9 +102,9 @@ div.deposit {
 
   div.transactionInfo {
     margin-top: 32px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
+    display: grid;
+    grid-template-rows: auto;
+    row-gap: 8px;
 
     span.value {
       color: var(--text-darker);
